fix: sample widget layout problem

--- a/tabs/src/views/Dashboard.css
+++ b/tabs/src/views/Dashboard.css
@@ -15,15 +15,14 @@
 }
 
 .widget {
-  flex: 1;
-  flex-shrink: 1;
-  height: 480px;
+  height: 320px;
+  width: 400px;
 }
 
 .widget2 {
-  flex: 2;
+  flex: 1;
   flex-shrink: 1;
-  height: 480px;
+  height: 320px;
 }
 
 @media screen and (min-width: 480px) {  
